[gd_scene load_steps=18 format=3 uid="uid://mkq35rnq6n3x"]

[ext_resource type="Script" path="res://scripts/state_machine/state_machine.gd" id="1_4tggm"]
[ext_resource type="Script" path="res://scripts/state_machine/game_states/game_state_titlescreen.gd" id="2_crxfe"]
[ext_resource type="Script" path="res://scripts/state_machine/game_states/game_state_map_selection.gd" id="3_n0vnd"]
[ext_resource type="Script" path="res://scripts/state_machine/game_states/game_state_difficulty_selection.gd" id="4_tvdv3"]
[ext_resource type="Script" path="res://scripts/state_machine/game_states/game_state_reset_game.gd" id="5_e7x0x"]
[ext_resource type="Script" path="res://scripts/state_machine/game_states/game_state_init_game.gd" id="6_et0hr"]
[ext_resource type="PackedScene" uid="uid://b5art7604qeby" path="res://scenes/ui/titlescreen.tscn" id="6_hq4hb"]
[ext_resource type="PackedScene" uid="uid://dbl2malqgknyt" path="res://scenes/ui/map_selection.tscn" id="7_iltek"]
[ext_resource type="Script" path="res://scripts/state_machine/game_states/game_state_pause.gd" id="7_vrprp"]
[ext_resource type="Script" path="res://scripts/state_machine/game_states/game_state_playing.gd" id="8_ayigk"]
[ext_resource type="PackedScene" uid="uid://ccpuwmsxa5l71" path="res://scenes/ui/difficulty_selection.tscn" id="8_obulf"]
[ext_resource type="Script" path="res://scripts/state_machine/game_states/game_state_defeat.gd" id="9_d2ejd"]
[ext_resource type="Script" path="res://scripts/state_machine/game_states/game_state_options.gd" id="10_1tdil"]
[ext_resource type="PackedScene" uid="uid://ws6g7erknixl" path="res://scenes/ui/infinite_video.tscn" id="10_gehr5"]
[ext_resource type="PackedScene" uid="uid://btctdg43tdyxp" path="res://scenes/ui/playing.tscn" id="11_pecm4"]
[ext_resource type="PackedScene" uid="uid://cyjglrb3udyb2" path="res://scenes/ui/pause.tscn" id="12_esqsx"]
[ext_resource type="PackedScene" uid="uid://bc5c306uo8oa0" path="res://scenes/ui/defeat.tscn" id="15_411v1"]

[node name="Main" type="Node2D"]

[node name="Game" type="Node" parent="."]

[node name="Menu" type="Node" parent="."]

[node name="InfiniteVideo" parent="Menu" instance=ExtResource("10_gehr5")]
visible = false

[node name="Titlescreen" parent="Menu" instance=ExtResource("6_hq4hb")]
visible = false
z_index = 6

[node name="MapSelection" parent="Menu" instance=ExtResource("7_iltek")]
visible = false
z_index = 6

[node name="DifficultySelection" parent="Menu" instance=ExtResource("8_obulf")]
visible = false
z_index = 6

[node name="Playing" parent="Menu" instance=ExtResource("11_pecm4")]
visible = false

[node name="Pause" parent="Menu" instance=ExtResource("12_esqsx")]
visible = false
z_index = 6

[node name="Defeat" parent="Menu" instance=ExtResource("15_411v1")]
z_index = 6

[node name="CPUParticles2D" type="CPUParticles2D" parent="Menu"]

[node name="GameStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("1_4tggm")
initial_state = NodePath("Titlescreen")

[node name="Titlescreen" type="Node" parent="GameStateMachine" node_paths=PackedStringArray("titlescreen_node", "infinite_video", "game_node")]
script = ExtResource("2_crxfe")
titlescreen_node = NodePath("../../Menu/Titlescreen")
infinite_video = NodePath("../../Menu/InfiniteVideo")
game_node = NodePath("../../Game")

[node name="MapSelection" type="Node" parent="GameStateMachine" node_paths=PackedStringArray("map_selection_node")]
script = ExtResource("3_n0vnd")
map_selection_node = NodePath("../../Menu/MapSelection")

[node name="DifficultySelection" type="Node" parent="GameStateMachine" node_paths=PackedStringArray("difficulty_selection_node")]
script = ExtResource("4_tvdv3")
difficulty_selection_node = NodePath("../../Menu/DifficultySelection")

[node name="ResetGame" type="Node" parent="GameStateMachine" node_paths=PackedStringArray("game_node", "infinite_video")]
script = ExtResource("5_e7x0x")
game_node = NodePath("../../Game")
infinite_video = NodePath("../../Menu/InfiniteVideo")

[node name="InitGame" type="Node" parent="GameStateMachine" node_paths=PackedStringArray("game_node", "playing_menu")]
script = ExtResource("6_et0hr")
game_node = NodePath("../../Game")
playing_menu = NodePath("../../Menu/Playing")

[node name="Playing" type="Node" parent="GameStateMachine" node_paths=PackedStringArray("playing_ui_node")]
script = ExtResource("8_ayigk")
playing_ui_node = NodePath("../../Menu/Playing")

[node name="Pause" type="Node" parent="GameStateMachine" node_paths=PackedStringArray("pause_node", "infinite_video")]
script = ExtResource("7_vrprp")
pause_node = NodePath("../../Menu/Pause")
infinite_video = NodePath("../../Menu/InfiniteVideo")

[node name="Defeat" type="Node" parent="GameStateMachine" node_paths=PackedStringArray("defeat_node")]
script = ExtResource("9_d2ejd")
defeat_node = NodePath("../../Menu/Defeat")

[node name="Options" type="Node" parent="GameStateMachine"]
script = ExtResource("10_1tdil")
